--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #inscription{display: flex;}
 #inscription #form2{position: relative;right: 280px;}
 #principle{display: flex;margin-left: 200px}
-#form1,#form2,#principle,.gallerie{animation-name: fadein;animation-duration: 7s;animation-timing-function: ease-out;}
+#form1,#form2,#principle,.gallerie{animation-name: fadein;animation-duration: 0.85s;animation-timing-function: ease-out;animation-delay:0.5s;}
 div #boutton:hover{color: azure;width: 100px;height:40;font-size:larger;}
 @keyframes fadein {from{opacity: 0;translate:translateX(2Opx) ;}to {opacity: 1;translate:translateX(Opx) ;}}
 .gallerie{display: flex;padding-bottom: 14px;}
