--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 #inscription{display: flex;}
 #inscription #form2{position: relative;right: 280px;}
 #principle{display: flex;margin-left: 200px}
-#form1,#form2,#principle,.gallerie{animation-name: fadein;animation-duration: 7s;animation-timing-function: ease-out;}
+#form1,#form2,#principle,.gallerie{animation-name: fadein;animation-duration: 1s;animation-timing-function: ease-out;}
+@keyframes fadein {from{opacity: 0;translate:translateX(20px) ;}to {opacity: 1;translate:translateX(0px) ;}}
 div #boutton:hover{color: azure;width: 100px;height:40;font-size:larger;}
-@keyframes fadein {from{opacity: 0;translate:translateX(2Opx) ;}to {opacity: 1;translate:translateX(Opx) ;}}
 .gallerie{display: flex;padding-bottom: 14px;}
 .gallerie .card{margin-right: 15PX;border-radius: 9PX;padding-top:40px ;}
 .icons{position: relative;bottom: 200px;right: 60px;}
