--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 #inscription #form2{position: relative;right: 280px;}
 #principle{display: flex;margin-left: 200px}
 #form1,#form2,#principle,.gallerie{animation-name: fadein;animation-duration: 0.5s;animation-timing-function: ease-out;}
-@keyframes fadein {from{opacity: 0;translate:translateX(20px) ;}to {opacity: 1;translate:translateX(0px) ;}}
+@keyframes fadein {from{opacity: 0;transform:translateX(20px) ;}to {opacity: 1;transform:translateX(0px) ;}}
 div #boutton:hover{color: azure;width: 100px;height:40;font-size:larger;}
 .gallerie{display: flex;padding-bottom: 14px;}
 .gallerie .card{margin-right: 15PX;border-radius: 9PX;padding-top:40px ;}
